fix: padding in Dynamic Editor on mobile
increased padding to improve readability and show the H1, H2 markers

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -825,7 +825,7 @@ button:focus {
 }
 
 .DynamicEditor {
-  padding: 0px 10px 10px;
+  padding: 9px 30px 10px;
 }
 button.block-menu-trigger {
   display: none !important;
